# trtc-asr-sdk-python

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
examples/: .env.example  file_asr.py  realtime_asr.py  realtime_asr_env.py  sentence_asr.py  test.pcm
tests/: test_file_recognizer.py  test_recognizer_lifecycle.py  test_sentence_recognizer.py  test_signature.py
trtc_asr/: __init__.py  credential.py  errors.py  file_recognizer.py  sentence_recognizer.py  signature.py  speech_recognizer.py  usersig.py
