[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trtc-asr"
version = "0.1.0"
description = "Tencent TRTC Real-time ASR SDK for Python"
requires-python = ">=3.8"
license = {text = "MIT"}
keywords = ["trtc", "asr", "speech-recognition", "tencent", "real-time"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "websockets>=11.0",
    "tls-sig-api-v2>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "python-dotenv>=1.0",
]

[tool.setuptools.packages.find]
include = ["trtc_asr*"]
